# Questionator

./: .env-docker-example  .gitignore  Makefile  README.md  docker-compose-dev.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  task.yml
.github/workflows/: docker-build.yml
Bot/: main.py  questionator_client.py
Bot/Cogs/: help.py  info.py  qotd.py  test.py
Bot/Libs/qotd/: __init__.py  models.py  qotd.py
Docker/Alpine-Docker/: Dockerfile  start.sh
Docker/Debian-Docker/: Dockerfile  start.sh
Scripts/: postgres-init.py  seeder.py
